Greatly simplified this test without losing any checks.  Done with #1296.
Specifically:

* Removed use of mock TemplateService.  This is what TestingTemplateService is for.
* Removed unnecessary wrapper objects that were generated everywhere.
* Corrected and clarified some test names (there's much left to be done on that front).

These changes dropped the length of the test class by ~160 lines without changing what it tests.